Source/WebKit2/Platform/IPC/MessageEncoder.h
@@ -28,8 +28,11 @@
 
 #include "ArgumentEncoder.h"
 #include "StringReference.h"
-#include <uuid/uuid.h>
 #include <wtf/Forward.h>
+
+#if HAVE(DTRACE)
+#include <uuid/uuid.h>
+#endif
 
 namespace IPC {
 
@@ -38,7 +41,9 @@ class StringReference;
 class MessageEncoder : public ArgumentEncoder {
 public:
     MessageEncoder(StringReference messageReceiverName, StringReference messageName, uint64_t destinationID);
+#if HAVE(DTRACE)
     MessageEncoder(StringReference messageReceiverName, StringReference messageName, uint64_t destinationID, const uuid_t&);
+#endif
     virtual ~MessageEncoder();
 
     StringReference messageReceiverName() const { return m_messageReceiverName; }
@@ -51,7 +56,9 @@ public:
     void setShouldDispatchMessageWhenWaitingForSyncReply(bool);
     bool shouldDispatchMessageWhenWaitingForSyncReply() const;
 
+#if HAVE(DTRACE)
     const uuid_t& UUID() const { return m_UUID; }
+#endif
 
 private:
     void encodeHeader();
@@ -59,7 +66,9 @@ private:
     StringReference m_messageReceiverName;
     StringReference m_messageName;
     uint64_t m_destinationID;
+#if HAVE(DTRACE)
     uuid_t m_UUID;
+#endif
 };
 
 } // namespace IPC
